--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <ul class="navbar">
                 <li class="navselection"><a href="#home">HOME</a>
                 <li class="navselection"><a href="#menu">MENU</a>
-                <li class="navselection"><a href="#VIP">VIP PACKAGES</a
+                <li class="navselection"><a href="#vip">VIP PACKAGES</a
                 <li class="navselection"><a href="#contact">CONTACT</a>
             </ul>
         </nav>
