added bracket to mobile nav menu

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <ul class="navbar">
                 <li class="navselection"><a href="#home">HOME</a>
                 <li class="navselection"><a href="#menu">MENU</a>
-                <li class="navselection"><a href="#vip">VIP PACKAGES</a
+                <li class="navselection"><a href="#vip">VIP PACKAGES</a>
                 <li class="navselection"><a href="#contact">CONTACT</a>
             </ul>
         </nav>
