added logo to all screen sizes to home.html

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
 <div id="contact">
 
 <div id="menubackground">
-<span data-picture data-alt="">
+<!-- <span data-picture data-alt="">
 			<span data-src="img/background/ben/bg6-768.jpg"></span>
 			<span data-src="img/background/ben/bg6-640.jpg" data-media="(orientation:portrait) and (min-width: 1px) and (max-width: 641px)"></span>
 			<span data-src="img/background/ben/bg6-768.jpg" data-media="(orientation:portrait) and (min-width: 641px)"></span>
@@ -14,7 +14,7 @@
 				<!-- Fallback content for non-JS browsers. Same img src as the initial, unqualified source element. -->
 			<noscript><img src="img/background/bg6-1600.jpg" alt=""></noscript>
 		</span>
-
+ -->
 
 <div id="contactinfo">
 
