--- a/pages/menu.html
+++ b/pages/menu.html
@@ -6,7 +6,7 @@
 
 
 <div id="menubackground">
-    <span data-picture data-alt="">
+<!--     <span data-picture data-alt="">
         <span data-src="img/background/ben/bg3-768.png"></span>
         <span data-src="img/background/ben/bg3-640.jpg" data-media="(orientation:portrait) and (min-width: 1px) and (max-width: 641px)"></span>
         <span data-src="img/background/ben/bg3-768.png" data-media="(orientation:portrait) and (min-width: 641px)"></span>
@@ -16,7 +16,7 @@
         <!-- Fallback content for non-JS browsers. Same img src as the initial, unqualified source element. -->
         <noscript><img src="img/background/bg3-1600.jpg" alt=""></noscript>
     </span>
-
+ -->
 
 
     <div class="grid grid-pad">
