--- a/pages/packages.html
+++ b/pages/packages.html
@@ -3,7 +3,7 @@
 
 <div id="menubackground">
 
-
+<!-- 
     <span data-picture data-alt="">
         <span data-src="img/background/ben/bg7-768.jpg"></span>
         <span data-src="img/background/ben/bg7-640.jpg" data-media="(orientation:portrait) and (min-width: 1px) and (max-width: 641px)"></span>
@@ -13,7 +13,7 @@
         <span data-src="img/background/ben/bg7-1600.jpg" data-media="(orientation:landscape) and (min-width: 1025px)"></span>
         <!-- Fallback content for non-JS browsers. Same img src as the initial, unqualified source element. -->
         <noscript><img src="img/background/bg7-1600.jpg" alt=""></noscript>
-    </span>
+    </span> -->
 
 
 
